# cpp-text-editor

./: .gitignore  CMakeLists.txt  README.md
include/: MainFrame.h
src/: MainFrame.cpp  main.cpp
